Added more tabs in list courses

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -542,6 +542,7 @@ menu.help           = Ajuda
 menu.logout         = Tancar sessi\u00F3
 menu.saveall        = Desa-ho tot com a ...
 menu.savechart      = Desa el gr\u00E0fic com ...
+menu.update         = Update course
 
 message.export_csv_success = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori ./export.
 
@@ -581,12 +582,15 @@ text.all                = Tots
 text.betweendates       = Between {0} and {1} 
 text.days               = Dies
 text.favorite           = Destacats
+text.future             = Future
 text.hours              = Hores
+text.inprogress         = In progress
 text.lastaccess         = \u00DAltim acc\u00E9s:
 text.minutes            = Minuts
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Sense coincid\u00E8ncies
+text.past               = Past
 text.recent             = Recents
 text.seconds            = Segons
 text.sectionplaceholder = Portada
