--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -542,6 +542,7 @@ menu.help           = Hilfe
 menu.logout         = Ausloggen
 menu.saveall        = Alles speichern unter ..
 menu.savechart      = Grafik speichern unter ...
+menu.update         = Update course
 
 message.export_csv_success = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis ./export.
 
@@ -581,12 +582,15 @@ text.all                = Alles
 text.betweendates       = Between {0} and {1}
 text.days               = Tage
 text.favorite           = Als Favorit markiert
+text.future             = Future
 text.hours              = Std
+text.inprogress         = In progress
 text.lastaccess         = Letzter Zugriff:
 text.minutes            = Protokoll
 text.moodle             = Moodle: 
 text.never              = noch nie
 text.nousers            = Kein Zufall
+text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
