--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -542,6 +542,7 @@ menu.help           = Help
 menu.logout         = Logout
 menu.saveall        = Save all as...
 menu.savechart      = Save chart as...
+menu.update         = Update course
 
 message.export_csv_success = CSV export successfully. Review the files in the ./export directory.
 
@@ -581,12 +582,15 @@ text.all                = All
 text.betweendates       = Between {0} and {1}
 text.days               = Days
 text.favorite           = Starred
+text.future             = Future
 text.hours              = Hours
+text.inprogress         = In progress
 text.lastaccess         = Last access: 
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Never
 text.nousers            = No coincidences
+text.past               = Past
 text.recent             = Recent
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
