--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -542,6 +542,7 @@ menu.help           = Ayuda
 menu.logout         = Cerrar sesi\u00F3n
 menu.saveall        = Guardar todo como...
 menu.savechart      = Guardar gr\u00E1fico como...
+menu.update         = Actualizar curso
 
 message.export_csv_success = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio ./export.
 
@@ -581,12 +582,15 @@ text.all                = Todos
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.days               = d\u00EDas
 text.favorite           = Destacados
+text.future             = Futuros
 text.hours              = horas
+text.inprogress         = En progreso
 text.lastaccess         = \u00DAltimo acceso: 
 text.minutes            = minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = No hay coincidencias
+text.past               = Pasados
 text.recent             = Recientes
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
