--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -542,6 +542,7 @@ menu.help           = Aidez-moi
 menu.logout         = Connectez - Out
 menu.saveall        = Enregistrer tout sous ...
 menu.savechart      = Enregistrer le graphique sous ...
+menu.update         = Update course
 
 message.export_csv_success = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire ./export.
 
@@ -581,12 +582,15 @@ text.all                = Tout
 text.betweendates       = Between {0} and {1}
 text.days               = Journ\u00E9es
 text.favorite           = Favoris\r\n
+text.future             = Future
 text.hours              = Heures
+text.inprogress         = In progress
 text.lastaccess         = Dernier acc\u00E8s:
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Jamais
 text.nousers            = Pas de co\u00EFncidences
+text.past               = Past
 text.recent             = R\u00E9cente
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
