--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -542,6 +542,7 @@ menu.help           = Aiuto
 menu.logout         = Disconnettersi
 menu.saveall        = Salva tutto come ...
 menu.savechart      = Salva grafico come ...
+menu.update         = Update course
 
 message.export_csv_success = Esportazione CSV con successo. Esaminare i file nella directory ./export.
 
@@ -581,12 +582,15 @@ text.all                = Tutti
 text.betweendates       = Between {0} and {1}
 text.days               = giorni
 text.favorite           = Preferiti
+text.future             = Future
 text.hours              = Ore
+text.inprogress         = In progress
 text.lastaccess         = Ultimo accesso:
 text.minutes            = Minuti
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Nessuna coincidenza
+text.past               = Past
 text.recent             = Recente
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
