--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -542,6 +542,7 @@ menu.help           = Socorro
 menu.logout         = Sair
 menu.saveall        = Salvar tudo como ...
 menu.savechart      = Salvar gr\u00E1fico como ...
+menu.update         = Update course
 
 message.export_csv_success = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio ./export.
 
@@ -581,12 +582,15 @@ text.all                = Todos
 text.betweendates       = Between {0} and {1}
 text.days               = Dias
 text.favorite           = Com estrela
+text.future             = Future
 text.hours              = Horas
+text.inprogress         = In progress
 text.lastaccess         = \u00DAltimo acesso:
 text.minutes            = Minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = Sem coincid\u00EAncias
+text.past               = Past
 text.recent             = Recentes
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
