Added host and logged in info in welcome window

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -67,6 +67,7 @@ label.lastupdate       = \u00DAltima actualitzaci\u00F3 local:
 label.loadingqualifier = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
 label.loadingstats     = Generant estad\u00EDstiques ...
 label.loadingstudents  = S'han carregat les qualificacions dels estudiants:
+label.loggedin         = Logged in:
 label.never            = No disponible
 label.of               = de
 label.oldPassword      = Contrasenya antiga:
@@ -81,7 +82,7 @@ label.startdate        = Data de refer\u00E8ncia inicial:
 label.type             = Tipus:
 label.updatinglog      = S'est\u00E0 actualitzant el registre ...
 label.user             = Usuari:
-label.welcome          = Benvinguda,
+label.welcome          = Benvinguda
 label.withhidden       = Amb ocults
 
 log.component.activity_report                                   = Informe d'activitat
