--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -67,6 +67,7 @@ label.lastupdate       = Letzte lokale Aktualisierung:
 label.loadingqualifier = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
 label.loadingstats     = Statistiken werden erstellt ...
 label.loadingstudents  = Sch\u00FClernoten geladen:
+label.loggedin         = Logged in:
 label.never            = Nicht verf\u00FCgbar
 label.of               = von
 label.oldPassword      = Altes Passwort:
@@ -81,7 +82,7 @@ label.startdate        = Startbezugsdatum:
 label.type             = Art:
 label.updatinglog      = Protokoll wird aktualisiert ...
 label.user             = Nutzername:
-label.welcome          = Herzlich willkommen,
+label.welcome          = Herzlich willkommen
 label.withhidden       = Mit verstecktem
 
 log.component.activity_report                                   = Kursaktivit\u00E4t
