--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -67,6 +67,7 @@ label.lastupdate       = Last local update:
 label.loadingqualifier = Generating course qualifier... (This process may take some time)
 label.loadingstats     = Generating statistics...
 label.loadingstudents  = Student grades loaded: 
+label.loggedin         = Logged in:
 label.never            = Not available
 label.of               = of
 label.oldPassword      = Old Password: 
@@ -81,7 +82,7 @@ label.startdate        = Start reference date:
 label.type             = Type:
 label.updatinglog      = Updating log...
 label.user             = User:
-label.welcome          = Welcome,
+label.welcome          = Welcome
 label.withhidden       = With hidden
 
 log.component.activity_report                                   = Activity report
