--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -67,6 +67,7 @@ label.lastupdate       = \u00DAltima actualizaci\u00F3n local:
 label.loadingqualifier = Generando el calificador del curso... (Este proceso puede tardar unos minutos)
 label.loadingstats     = Generando estadisticas...
 label.loadingstudents  = Calificaciones de alumnos cargadas: 
+label.loggedin         = Inicio sesi\u00F3n:
 label.never            = No disponible
 label.of               = de
 label.oldPassword      = Contrase\u00F1a antigua: 
@@ -81,7 +82,7 @@ label.startdate        = Fecha de referencia inicial:
 label.type             = Tipo:
 label.updatinglog      = Actualizando log...
 label.user             = Usuario:
-label.welcome          = Bienvenida/o,
+label.welcome          = Bienvenida/o
 label.withhidden       = Con ocultos
 
 log.component.activity_report                                   = Actividad del curso
