--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -67,6 +67,7 @@ label.lastupdate       = Derni\u00E8re mise \u00E0 jour locale:
 label.loadingqualifier = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
 label.loadingstats     = G\u00E9n\u00E9rer des statistiques ...
 label.loadingstudents  = Grades d'\u00E9l\u00E8ves charg\u00E9s:
+label.loggedin         = Logged in:
 label.never            = Indisponible
 label.of               = de
 label.oldPassword      = Ancien mot de passe:
@@ -81,7 +82,7 @@ label.startdate        = Date de r\u00E9f\u00E9rence de d\u00E9part:
 label.type             = Type:
 label.updatinglog      = Mise \u00E0 jour du journal ...
 label.user             = Utilisateur:
-label.welcome          = Bienvenue,
+label.welcome          = Bienvenue
 label.withhidden       = Avec cach\u00E9
 
 log.component.activity_report                                   = Activit\u00E9s du cours
