--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -67,6 +67,7 @@ label.lastupdate       = Ultimo aggiornamento locale:
 label.loadingqualifier = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
 label.loadingstats     = Generazione di statistiche ...
 label.loadingstudents  = Voti degli studenti caricati:
+label.loggedin         = Logged in:
 label.never            = Non disponibile
 label.of               = di
 label.oldPassword      = Vecchia password:
@@ -81,7 +82,7 @@ label.startdate        = Inizia la data di riferimento:
 label.type             = Genere:
 label.updatinglog      = Aggiornamento del registro ...
 label.user             = Utente:
-label.welcome          = Benvenuto,
+label.welcome          = Benvenuto
 label.withhidden       = Con nascosto
 
 log.component.activity_report                                   = Attivit\u00E0 del corso
