--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -67,6 +67,7 @@ label.lastupdate       = \u00DAltima atualiza\u00E7\u00E3o local:
 label.loadingqualifier = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
 label.loadingstats     = Gerando estat\u00EDsticas ...
 label.loadingstudents  = Notas do aluno carregado:
+label.loggedin         = Logged in:
 label.never            = N\u00E3o dispon\u00EDvel
 label.of               = do
 label.oldPassword      = Senha Antiga:
@@ -81,7 +82,7 @@ label.startdate        = Data de refer\u00EAncia inicial:
 label.type             = Tipo:
 label.updatinglog      = Atualizando log ...
 label.user             = Usu\u00E1rio:
-label.welcome          = Bem vinda,
+label.welcome          = Bem vinda
 label.withhidden       = Com oculto\r\n\r\n\r\n
 
 log.component.activity_report                                   = Relat\u00F3rio de atividades
