Added General Violin and group violin plots

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -50,6 +50,19 @@ error.userdata        = Error en recuperar les dades de l'usuari.
 header.passwordChangedMessage = S'ha detectat la contrasenya
 header.passwordDateTime       = Contrasenya de data anterior:
 
+html.btnBoxPlot        = Diagramacaja
+html.btnBoxPlotGroup   = Boxplot de Grups
+html.btnCalificaciones = Qualificaci\u00F3
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = Llegenda
+html.btnLine           = L\u00EDnies
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = Barres Apilades
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin Groups
+
 label.activity         = \u00DAltima connexi\u00F3:
 label.categoryitem     = Categoria / article:
 label.close            = Tanca
@@ -595,6 +608,7 @@ text.past               = Past
 text.recent             = Recents
 text.seconds            = Segons
 text.sectionplaceholder = Portada
+text.selectedUsers      = Selected Users
 
 title.passwordChanged = S'ha canviat la contrasenya
 
