--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -50,6 +50,19 @@ error.userdata        = Fehler beim Wiederherstellen der Benutzerdaten.
 header.passwordChangedMessage = Gefunden wurde ein ge\u00E4ndertes Passwort
 header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 
+html.btnBoxPlot        = BoxPlot
+html.btnBoxPlotGroup   = Gruppen-Boxplot
+html.btnCalificaciones = Qualifikation
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = Legende
+html.btnLine           = Linien
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = Stacked Bar
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin Groups
+
 label.activity         = Letzte Verbindung:
 label.categoryitem     = Kategorie / Gegenstand:
 label.close            = Schlie\u00DFen
@@ -595,6 +608,7 @@ text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
+text.selectedUsers      = Selected Users
 
 title.passwordChanged = Passwort wurde ge\u00E4ndert
 
