--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -50,6 +50,19 @@ error.userdata        = Error when recovering user data.
 header.passwordChangedMessage = Detected was password changed
 header.passwordDateTime       = Previous date password: 
 
+html.btnBoxPlot        = Boxplot
+html.btnBoxPlotGroup   = Group BoxPlot
+html.btnCalificaciones = Qualification
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = Legend
+html.btnLine           = Lines
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = Stacked Bar
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin Groups
+
 label.activity         = Last connection:
 label.categoryitem     = Category/Item:
 label.close            = Close
@@ -595,6 +608,7 @@ text.past               = Past
 text.recent             = Recent
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
+text.selectedUsers      = Selected Users
 
 title.passwordChanged = Password was changed
 
