--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -50,6 +50,19 @@ error.userdata        = Error al recuperar los datos del usuario.
 header.passwordChangedMessage = Se ha detectado que se ha cambiado la contrase\u00F1a
 header.passwordDateTime       = Fecha de la contrase\u00F1a antigua: 
 
+html.btnBoxPlot        = Boxplot
+html.btnBoxPlotGroup   = BoxPlot de Grupos
+html.btnCalificaciones = Calificaciones
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = Leyenda
+html.btnLine           = L\u00EDneas
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = Barras Apiladas
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin de Grupos
+
 label.activity         = \u00DAltima conexi\u00F3n:
 label.categoryitem     = Categor\u00EDa/Item:
 label.close            = Cerrar
@@ -595,6 +608,7 @@ text.past               = Pasados
 text.recent             = Recientes
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
+text.selectedUsers      = Usuarios Seleccionados
 
 title.passwordChanged = Contrase\u00F1a modificada
 
