--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -50,6 +50,19 @@ error.userdata        = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9e
 header.passwordChangedMessage = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
 header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 
+html.btnBoxPlot        = Boxplot
+html.btnBoxPlotGroup   = Boxplot de Groupe
+html.btnCalificaciones = Qualification
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = L\u00E9gende
+html.btnLine           = Lignes
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = Bar Empil\u00E9e
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin Groups
+
 label.activity         = Derni\u00E8re connexion:
 label.categoryitem     = Cat\u00E9gorie / article:
 label.close            = Fermer
@@ -595,6 +608,7 @@ text.past               = Past
 text.recent             = R\u00E9cente
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
+text.selectedUsers      = Selected Users
 
 title.passwordChanged = Le mot de passe a \u00E9t\u00E9 chang\u00E9
 
