--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -50,6 +50,19 @@ error.userdata        = Errore durante il recupero dei dati dell'utente.
 header.passwordChangedMessage = Rilevato \u00E8 stata modificata la password
 header.passwordDateTime       = Data precedente password:
 
+html.btnBoxPlot        = Boxplot
+html.btnBoxPlotGroup   = Diagramma di Gruppo
+html.btnCalificaciones = Qualificazione
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = Leggenda
+html.btnLine           = Linee
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = A Barre In Pila
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin Groups
+
 label.activity         = Ultima connessione:
 label.categoryitem     = Categoria / Articolo:
 label.close            = Vicino
@@ -595,6 +608,7 @@ text.past               = Past
 text.recent             = Recente
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
+text.selectedUsers      = Selected Users
 
 title.passwordChanged = La password \u00E8 stata cambiata
 
