--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -50,6 +50,19 @@ error.userdata        = Erro ao recuperar dados do usu\u00E1rio.
 header.passwordChangedMessage = Detectado foi senha alterada
 header.passwordDateTime       = Senha da data anterior:
 
+html.btnBoxPlot        = Boxplot
+html.btnBoxPlotGroup   = Boxplot do Grupo
+html.btnCalificaciones = Qualifica\u00E7\u00E3o
+html.btnGroupMean      = Group(s) Stats
+html.btnHeatmap        = Heatmap
+html.btnLegend         = Lenda
+html.btnLine           = Lines
+html.btnMean           = General Stats
+html.btnRadar          = Radar
+html.btnStackedBar     = Bar Empilhados
+html.btnViolin         = Violin
+html.btnViolinGroup    = Violin Groups
+
 label.activity         = \u00DAltima conex\u00E3o:
 label.categoryitem     = Categoria / Item:
 label.close            = Perto
@@ -595,6 +608,7 @@ text.past               = Past
 text.recent             = Recentes
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
+text.selectedUsers      = Selected Users
 
 title.passwordChanged = Senha foi alterada
 
