Traduction for buttons

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -53,11 +53,11 @@ header.passwordDateTime       = Fecha de la contrase\u00F1a antigua:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = BoxPlot de Grupos
 html.btnCalificaciones = Calificaciones
-html.btnGroupMean      = Group(s) Stats
+html.btnGroupMean      = Estad\u00EDsticas de grupo(s)
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Leyenda
 html.btnLine           = L\u00EDneas
-html.btnMean           = General Stats
+html.btnMean           = Estad\u00EDsticas generales
 html.btnRadar          = Radar
 html.btnStackedBar     = Barras Apiladas
 html.btnViolin         = Violin
