Added Teaching guide traduction

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -560,30 +560,31 @@ menu.update         = Update course
 
 message.export_csv_success = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori ./export.
 
-module.assign   = Assignaci\u00F3
-module.book     = Llibre
-module.category = Categoria
-module.chat     = Xat
-module.choice   = Elecci\u00F3
-module.data     = Base de dades
-module.feedback = Feedback
-module.folder   = Carpeta
-module.forum    = F\u00F2rum
-module.glossary = Glossari
-module.imscp    = Paquet de contingut IMS
-module.label    = Etiqueta
-module.lesson   = Lli\u00E7\u00F3
-module.lti      = Eina externa
-module.manual   = Element manual
-module.page     = P\u00E0gina
-module.quiz     = Q\u00FCestionari
-module.resource = Dossier
-module.scorm    = Paquet SCORM
-module.survey   = Enquesta
-module.tab      = Visualitzaci\u00F3 de pestanya
-module.url      = URL
-module.wiki     = Wiki
-module.workshop = Taller
+module.assign      = Assignaci\u00F3
+module.book        = Llibre
+module.category    = Categoria
+module.chat        = Xat
+module.choice      = Elecci\u00F3
+module.data        = Base de dades
+module.feedback    = Feedback
+module.folder      = Carpeta
+module.forum       = F\u00F2rum
+module.glossary    = Glossari
+module.guiadocente = Teaching guide
+module.imscp       = Paquet de contingut IMS
+module.label       = Etiqueta
+module.lesson      = Lli\u00E7\u00F3
+module.lti         = Eina externa
+module.manual      = Element manual
+module.page        = P\u00E0gina
+module.quiz        = Q\u00FCestionari
+module.resource    = Dossier
+module.scorm       = Paquet SCORM
+module.survey      = Enquesta
+module.tab         = Visualitzaci\u00F3 de pestanya
+module.url         = URL
+module.wiki        = Wiki
+module.workshop    = Taller
 
 tab.component    = Components
 tab.coursemodule = M\u00F2duls del curs
