--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -560,30 +560,31 @@ menu.update         = Update course
 
 message.export_csv_success = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis ./export.
 
-module.assign   = Zuordnung
-module.book     = Buch
-module.category = Kategorie
-module.chat     = Plaudern
-module.choice   = Wahl
-module.data     = Datenbank
-module.feedback = Feedback
-module.folder   = Mappe
-module.forum    = Forum
-module.glossary = Glossar
-module.imscp    = IMS-Inhaltspaket
-module.label    = Etikette
-module.lesson   = Lektion
-module.lti      = Externes Werkzeug
-module.manual   = Manueller Artikel
-module.page     = Seite
-module.quiz     = Quiz
-module.resource = Datei
-module.scorm    = SCORM-Paket
-module.survey   = Umfrage
-module.tab      = Tab-Anzeige
-module.url      = URL
-module.wiki     = Wiki
-module.workshop = Werkstatt
+module.assign      = Zuordnung
+module.book        = Buch
+module.category    = Kategorie
+module.chat        = Plaudern
+module.choice      = Wahl
+module.data        = Datenbank
+module.feedback    = Feedback
+module.folder      = Mappe
+module.forum       = Forum
+module.glossary    = Glossar
+module.guiadocente = Teaching guide
+module.imscp       = IMS-Inhaltspaket
+module.label       = Etikette
+module.lesson      = Lektion
+module.lti         = Externes Werkzeug
+module.manual      = Manueller Artikel
+module.page        = Seite
+module.quiz        = Quiz
+module.resource    = Datei
+module.scorm       = SCORM-Paket
+module.survey      = Umfrage
+module.tab         = Tab-Anzeige
+module.url         = URL
+module.wiki        = Wiki
+module.workshop    = Werkstatt
 
 tab.component    = Komponenten
 tab.coursemodule = Kursmodule
