--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -560,30 +560,31 @@ menu.update         = Update course
 
 message.export_csv_success = CSV export successfully. Review the files in the ./export directory.
 
-module.assign   = Assignment
-module.book     = Book
-module.category = Category
-module.chat     = Chat
-module.choice   = Choice
-module.data     = Database
-module.feedback = Feedback
-module.folder   = Folder
-module.forum    = Forum
-module.glossary = Glossary
-module.imscp    = IMS content package
-module.label    = Label
-module.lesson   = Lesson
-module.lti      = External tool
-module.manual   = Manual item
-module.page     = Page
-module.quiz     = Quiz
-module.resource = File
-module.scorm    = SCORM package
-module.survey   = Survey
-module.tab      = Tab display
-module.url      = URL
-module.wiki     = Wiki
-module.workshop = Workshop
+module.assign      = Assignment
+module.book        = Book
+module.category    = Category
+module.chat        = Chat
+module.choice      = Choice
+module.data        = Database
+module.feedback    = Feedback
+module.folder      = Folder
+module.forum       = Forum
+module.glossary    = Glossary
+module.guiadocente = Teaching guide
+module.imscp       = IMS content package
+module.label       = Label
+module.lesson      = Lesson
+module.lti         = External tool
+module.manual      = Manual item
+module.page        = Page
+module.quiz        = Quiz
+module.resource    = File
+module.scorm       = SCORM package
+module.survey      = Survey
+module.tab         = Tab display
+module.url         = URL
+module.wiki        = Wiki
+module.workshop    = Workshop
 
 tab.component    = Components
 tab.coursemodule = Course Modules
