--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -560,30 +560,31 @@ menu.update         = Actualizar curso
 
 message.export_csv_success = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio ./export.
 
-module.assign   = Tarea
-module.book     = Libro
-module.category = Categor\u00EDa
-module.chat     = Chat
-module.choice   = Consulta
-module.data     = Base de datos
-module.feedback = Encuesta
-module.folder   = Carpeta
-module.forum    = Foro
-module.glossary = Glosario
-module.imscp    = Paquete de contenido IMS
-module.label    = Etiqueta
-module.lesson   = Lecci\u00F3n
-module.lti      = Herramienta externa
-module.manual   = \u00CDtem manual
-module.page     = P\u00E1gina
-module.quiz     = Cuestionario
-module.resource = Archivo
-module.scorm    = Paquete SCORM
-module.survey   = Encuestas predefinidas
-module.tab      = Pesta\u00F1a de visualizaci\u00F3n
-module.url      = URL
-module.wiki     = Wiki
-module.workshop = Taller
+module.assign      = Tarea
+module.book        = Libro
+module.category    = Categor\u00EDa
+module.chat        = Chat
+module.choice      = Consulta
+module.data        = Base de datos
+module.feedback    = Encuesta
+module.folder      = Carpeta
+module.forum       = Foro
+module.glossary    = Glosario
+module.guiadocente = Gu\u00EDa docente
+module.imscp       = Paquete de contenido IMS
+module.label       = Etiqueta
+module.lesson      = Lecci\u00F3n
+module.lti         = Herramienta externa
+module.manual      = \u00CDtem manual
+module.page        = P\u00E1gina
+module.quiz        = Cuestionario
+module.resource    = Archivo
+module.scorm       = Paquete SCORM
+module.survey      = Encuestas predefinidas
+module.tab         = Pesta\u00F1a de visualizaci\u00F3n
+module.url         = URL
+module.wiki        = Wiki
+module.workshop    = Taller
 
 tab.component    = Componentes
 tab.coursemodule = M\u00F3dulos curso
