--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -560,30 +560,31 @@ menu.update         = Update course
 
 message.export_csv_success = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire ./export.
 
-module.assign   = Affectation
-module.book     = Livre
-module.category = Cat\u00E9gorie
-module.chat     = Bavarder
-module.choice   = Choix
-module.data     = Base de donn\u00E9es
-module.feedback = Retour d'information
-module.folder   = Dossier
-module.forum    = Forum
-module.glossary = Glossaire
-module.imscp    = Paquet de contenu IMS
-module.label    = \u00C9tiquette
-module.lesson   = Le\u00E7on
-module.lti      = Outil externe
-module.manual   = \u00C9l\u00E9ment manuel
-module.page     = Page
-module.quiz     = Quiz
-module.resource = Fichier
-module.scorm    = Forfait SCORM
-module.survey   = Sondage
-module.tab      = Affichage par onglet
-module.url      = URL
-module.wiki     = Wiki
-module.workshop = Atelier
+module.assign      = Affectation
+module.book        = Livre
+module.category    = Cat\u00E9gorie
+module.chat        = Bavarder
+module.choice      = Choix
+module.data        = Base de donn\u00E9es
+module.feedback    = Retour d'information
+module.folder      = Dossier
+module.forum       = Forum
+module.glossary    = Glossaire
+module.guiadocente = Teaching guide
+module.imscp       = Paquet de contenu IMS
+module.label       = \u00C9tiquette
+module.lesson      = Le\u00E7on
+module.lti         = Outil externe
+module.manual      = \u00C9l\u00E9ment manuel
+module.page        = Page
+module.quiz        = Quiz
+module.resource    = Fichier
+module.scorm       = Forfait SCORM
+module.survey      = Sondage
+module.tab         = Affichage par onglet
+module.url         = URL
+module.wiki        = Wiki
+module.workshop    = Atelier
 
 tab.component    = Composants
 tab.coursemodule = Modules de cours
