--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -560,30 +560,31 @@ menu.update         = Update course
 
 message.export_csv_success = Esportazione CSV con successo. Esaminare i file nella directory ./export.
 
-module.assign   = assegnazione
-module.book     = Libro
-module.category = Categoria
-module.chat     = Chiacchierare
-module.choice   = Scelta
-module.data     = Banca dati
-module.feedback = Risposta
-module.folder   = Cartella
-module.forum    = Forum
-module.glossary = Glossario
-module.imscp    = Pacchetto di contenuti IMS
-module.label    = Etichetta
-module.lesson   = Lezione
-module.lti      = Strumento esterno
-module.manual   = Articolo manuale
-module.page     = Pagina
-module.quiz     = Quiz
-module.resource = File
-module.scorm    = Pacchetto SCORM
-module.survey   = Sondaggio
-module.tab      = Tab display
-module.url      = URL
-module.wiki     = wiki
-module.workshop = laboratorio
+module.assign      = assegnazione
+module.book        = Libro
+module.category    = Categoria
+module.chat        = Chiacchierare
+module.choice      = Scelta
+module.data        = Banca dati
+module.feedback    = Risposta
+module.folder      = Cartella
+module.forum       = Forum
+module.glossary    = Glossario
+module.guiadocente = Teaching guide
+module.imscp       = Pacchetto di contenuti IMS
+module.label       = Etichetta
+module.lesson      = Lezione
+module.lti         = Strumento esterno
+module.manual      = Articolo manuale
+module.page        = Pagina
+module.quiz        = Quiz
+module.resource    = File
+module.scorm       = Pacchetto SCORM
+module.survey      = Sondaggio
+module.tab         = Tab display
+module.url         = URL
+module.wiki        = wiki
+module.workshop    = laboratorio
 
 tab.component    = componenti
 tab.coursemodule = Moduli del corso
