--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -560,30 +560,31 @@ menu.update         = Update course
 
 message.export_csv_success = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio ./export.
 
-module.assign   = Tarefa
-module.book     = Livro
-module.category = Categoria
-module.chat     = Bate-papo
-module.choice   = Escolha
-module.data     = Base de dados
-module.feedback = Coment\u00E1rios
-module.folder   = Pasta
-module.forum    = F\u00F3rum
-module.glossary = Gloss\u00E1rio
-module.imscp    = Pacote de conte\u00FAdo IMS
-module.label    = R\u00F3tulo
-module.lesson   = Li\u00E7\u00E3o
-module.lti      = Ferramenta externa
-module.manual   = Item manual
-module.page     = P\u00E1gina
-module.quiz     = Question\u00E1rio
-module.resource = Arquivo
-module.scorm    = Pacote SCORM
-module.survey   = Pesquisa
-module.tab      = Exibi\u00E7\u00E3o de guia
-module.url      = URL
-module.wiki     = Wiki
-module.workshop = Oficina
+module.assign      = Tarefa
+module.book        = Livro
+module.category    = Categoria
+module.chat        = Bate-papo
+module.choice      = Escolha
+module.data        = Base de dados
+module.feedback    = Coment\u00E1rios
+module.folder      = Pasta
+module.forum       = F\u00F3rum
+module.glossary    = Gloss\u00E1rio
+module.guiadocente = Teaching guide
+module.imscp       = Pacote de conte\u00FAdo IMS
+module.label       = R\u00F3tulo
+module.lesson      = Li\u00E7\u00E3o
+module.lti         = Ferramenta externa
+module.manual      = Item manual
+module.page        = P\u00E1gina
+module.quiz        = Question\u00E1rio
+module.resource    = Arquivo
+module.scorm       = Pacote SCORM
+module.survey      = Pesquisa
+module.tab         = Exibi\u00E7\u00E3o de guia
+module.url         = URL
+module.wiki        = Wiki
+module.workshop    = Oficina
 
 tab.component    = Componentes
 tab.coursemodule = M\u00F3dulos do curso
