Added acumulative line graph for logs

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Contrasenya de data anterior:
 html.btnBoxPlot        = Diagramacaja
 html.btnBoxPlotGroup   = Boxplot de Grups
 html.btnCalificaciones = Qualificaci\u00F3
+html.btnCumLine        = Accumulated Lines
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Llegenda
@@ -610,6 +611,7 @@ text.recent             = Recents
 text.seconds            = Segons
 text.sectionplaceholder = Portada
 text.selectedUsers      = Selected Users
+text.stats              = Estad\u00EDstiques
 
 title.passwordChanged = S'ha canviat la contrasenya
 
