--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 html.btnBoxPlot        = BoxPlot
 html.btnBoxPlotGroup   = Gruppen-Boxplot
 html.btnCalificaciones = Qualifikation
+html.btnCumLine        = Accumulated Lines
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Legende
@@ -610,6 +611,7 @@ text.recent             = K\u00FCrzlich\r\n
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
 text.selectedUsers      = Selected Users
+text.stats              = Kursstatistiken
 
 title.passwordChanged = Passwort wurde ge\u00E4ndert
 
