--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Fecha de la contrase\u00F1a antigua:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = BoxPlot de Grupos
 html.btnCalificaciones = Calificaciones
+html.btnCumLine        = L\u00EDneas Acumuladas
 html.btnGroupMean      = Estad\u00EDsticas de grupo(s)
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Leyenda
@@ -610,6 +611,7 @@ text.recent             = Recientes
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
+text.stats              = Estad\u00EDsticas
 
 title.passwordChanged = Contrase\u00F1a modificada
 
