--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Data precedente password:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Diagramma di Gruppo
 html.btnCalificaciones = Qualificazione
+html.btnCumLine        = Accumulated Lines
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Leggenda
@@ -610,6 +611,7 @@ text.recent             = Recente
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 text.selectedUsers      = Selected Users
+text.stats              = Statistiche
 
 title.passwordChanged = La password \u00E8 stata cambiata
 
