--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Senha da data anterior:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot do Grupo
 html.btnCalificaciones = Qualifica\u00E7\u00E3o
+html.btnCumLine        = Accumulated Lines
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Lenda
@@ -610,6 +611,7 @@ text.recent             = Recentes
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
+text.stats              = Estat\u00EDsticas
 
 title.passwordChanged = Senha foi alterada
 
