--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Previous date password:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Group BoxPlot
 html.btnCalificaciones = Qualification
+html.btnCumLine        = Accumulated Lines
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Legend
@@ -610,6 +611,7 @@ text.recent             = Recent
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
+text.stats              = Statistics
 
 title.passwordChanged = Password was changed
 
