--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -53,6 +53,7 @@ header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot de Groupe
 html.btnCalificaciones = Qualification
+html.btnCumLine        = Accumulated Lines
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = L\u00E9gende
@@ -610,6 +611,7 @@ text.recent             = R\u00E9cente
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
+text.stats              = Statistiques
 
 title.passwordChanged = Le mot de passe a \u00E9t\u00E9 chang\u00E9
 
